# Django_Tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
app/: exceptions.py  models.py
app/api/: serializers.py  views.py
app/tests/: test_users.py
core/: settings.py  urls.py
main/: settings.py
nginx/: Dockerfile  default.conf
